deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dinghy-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dinghy-agent
  template:
    metadata:
      labels:
        app: dinghy-agent
    spec:
      containers:
        - name: main-app
          image: dinghy-agent
          imagePullPolicy: Never
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - name: serf
            containerPort: 7777
