deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dinghy-agent-svc
  name: dinghy-agent-svc
spec:
  ports:
  - name: grpc
    protocol: TCP
    port: 80
    targetPort: 5001
  - name: serftcp
    protocol: TCP
    port: 7777
    targetPort: 7777
  - name: serfudp
    protocol: UDP
    port: 7777
    targetPort: 7777
  selector:
    app: dinghy-agent
  type: ClusterIP
